Fix Cloud Build configuration for environment variables

--- a/gcp/cloudbuild.yaml
+++ b/gcp/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
       - '-t'
       - 'gcr.io/$PROJECT_ID/commonplace-directus:latest'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/commonplace-directus:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/commonplace-directus:$BUILD_ID'
       - '-f'
       - 'Dockerfile'
       - '.'
@@ -20,7 +20,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/commonplace-directus:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/commonplace-directus:$BUILD_ID'
 
   # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -30,14 +30,16 @@ steps:
       - 'deploy'
       - 'commonplace-directus'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/commonplace-directus:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/commonplace-directus:$BUILD_ID'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'DB_CLIENT=pg,DB_HOST=${_DB_HOST},DB_PORT=${_DB_PORT},DB_DATABASE=${_DB_DATABASE},DB_USER=${_DB_USER},DB_PASSWORD=${_DB_PASSWORD},KEY=${_DIRECTUS_KEY},SECRET=${_DIRECTUS_SECRET},PUBLIC_URL=${_PUBLIC_URL},ADMIN_EMAIL=${_ADMIN_EMAIL},ADMIN_PASSWORD=${_ADMIN_PASSWORD},CORS_ENABLED=true,CORS_ORIGIN=${_CORS_ORIGIN}'
+      - 'DB_CLIENT=pg,DB_HOST=${_DB_HOST},DB_PORT=${_DB_PORT},DB_DATABASE=${_DB_DATABASE},DB_USER=${_DB_USER},DB_PASSWORD=${_DB_PASSWORD},KEY=${_DIRECTUS_KEY},SECRET=${_DIRECTUS_SECRET},PUBLIC_URL=${_PUBLIC_URL},ADMIN_EMAIL=${_ADMIN_EMAIL},ADMIN_PASSWORD=${_ADMIN_PASSWORD},CORS_ENABLED=true'
+      - '--set-env-vars'
+      - 'CORS_ORIGIN=${_CORS_ORIGIN}'
       - '--memory'
       - '2Gi'
       - '--cpu'
@@ -49,7 +51,7 @@ steps:
 
 images:
   - 'gcr.io/$PROJECT_ID/commonplace-directus:latest'
-  - 'gcr.io/$PROJECT_ID/commonplace-directus:$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/commonplace-directus:$BUILD_ID'
 
 options:
   logging: CLOUD_LOGGING_ONLY
