Configure Directus to use Cloud Run PORT (8080)

--- a/gcp/Dockerfile
+++ b/gcp/Dockerfile
@@ -1,11 +1,12 @@
 FROM directus/directus:latest
 
-# Add any custom extensions or configurations here
-# For now, we'll use the base Directus image
+# Cloud Run provides PORT environment variable
+# Directus will use PORT if set, otherwise defaults to 8055
+ENV PORT=8080
 
 WORKDIR /directus
 
-# Expose Directus port
-EXPOSE 8055
+# Expose port (Cloud Run uses PORT env var)
+EXPOSE 8080
 
 # Directus will start automatically via the base image's entrypoint
