--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@directus/sdk": "^14.0.0",
-    "st-page-flip": "^1.0.0"
+    "st-page-flip": "^1.0.0",
+    "marked": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/marked": "^6.0.0",
     "typescript": "^5.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
