--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "tsx": "^4.7.0",
+    "@types/pg": "^8.16.0",
     "gray-matter": "^4.0.3",
+    "pg": "^8.17.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
 }
